--- a/App Servicio/resumen.html
+++ b/App Servicio/resumen.html
@@ -21,9 +21,9 @@
                 <i class='bx bx-menu'></i>
             </div>
 
-            <div class="elementoLat cabecera_Barralateral">
+            <div class="elementoLat seleccionadoLat">
                 <ul>
-                    <a href="resumen.html"><li>Cosa 1</li></a>
+                    <a href=""><li>Cosa 1</li></a>
                     
                 </ul>
             </div>
@@ -55,10 +55,8 @@
             <div class="section">
 
                 <div class="box-area">
-                    <h2 style="color: #2b2626">¿Como utilizar Eboost?</h2>
-                    <video controls >
-                        <source src="media/tutorial.mp4" type="video/mp4">
-                    </video>
+                    <h2 style="color: #2b2626">Resumen</h2>
+                   
                 </div>
 
                 <div class="box-area">
@@ -70,7 +68,12 @@
                 </div>
 
                 <div class="box-area">
-                    <h2 style="color: #2b2626">lorem ipsum</h2>
+                    <h2 style="color: #2b2626">Informe de los datos</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, tenetur id fugiat optio, laudantium, totam quo expedita repellendus magnam dolor consequuntur accusamus labore nisi harum dolore facilis laborum omnis qui!</p>
+                </div>
+
+                <div class="box-area">
+                    <h2 style="color: #2b2626">Datos:</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, tenetur id fugiat optio, laudantium, totam quo expedita repellendus magnam dolor consequuntur accusamus labore nisi harum dolore facilis laborum omnis qui!</p>
                 </div>
 
