Mezcla barra lateral con homepage y resumen

--- a/App Servicio/index.html
+++ b/App Servicio/index.html
@@ -23,7 +23,7 @@
 
             <div class="elementoLat cabecera_Barralateral">
                 <ul>
-                    <a href=""><li>
+                    <a href="resumen.html"><li>
                         <i class='bx bxs-data iconEL'></i>
                         <span class="LetrasEL">Cosa 1</span>
                     </li></a>          
@@ -72,11 +72,31 @@
         </aside>
 
         <div class="wrapper">
+
             <div class="section">
+
                 <div class="box-area">
-                    <h2 style="color: #2b2626">Homepage</h2>
+                    <h2 style="color: #2b2626">¿Como utilizar Eboost?</h2>
+                    <video controls >
+                        <source src="media/tutorial.mp4" type="video/mp4">
+                    </video>
                 </div>
+
+                <div class="box-area">
+                    <h2 style="color: #2b2626">Aumentar capacidad</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+                         elit. Hic, adipisci. Facere ullam sed, iste dolorem 
+                         vel magnam veniam sapiente doloribus et commodi tempore
+                          distinctio.</p>
+                </div>
+
+                <div class="box-area">
+                    <h2 style="color: #2b2626">lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, tenetur id fugiat optio, laudantium, totam quo expedita repellendus magnam dolor consequuntur accusamus labore nisi harum dolore facilis laborum omnis qui!</p>
+                </div>
+
             </div>
+
         </div>
 
         <script src="../App Servicio/javascript/sidebar.js"></script>
