--- a/App Servicio/resumen.html
+++ b/App Servicio/resumen.html
@@ -28,7 +28,7 @@
                         <i class='bx bxs-data iconEL'></i>
                         <span class="LetrasEL">Cosa 1</span>
                     </li></a>          
-                    <a href=""><li>
+                    <a href="EstadisticasTDC.html"><li>
                         <i class='bx bxs-data iconEL'></i>
                         <span class="LetrasEL">Cosa 2</span>
                     </li></a>              
