Revisado ver si mergea biaen
aasad

--- a/App Servicio/resumen.html
+++ b/App Servicio/resumen.html
@@ -55,27 +55,19 @@
             <div class="section">
 
                 <div class="box-area">
-                    <h2 style="color: #2b2626">Resumen</h2>
+                    <h3 style="color: #2b2626">Resumen</h3>
+                    <div class="resumen">
+                       
+
+                    </div>
                    
                 </div>
 
                 <div class="box-area">
-                    <h2 style="color: #2b2626">Aumentar capacidad</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing
-                         elit. Hic, adipisci. Facere ullam sed, iste dolorem 
-                         vel magnam veniam sapiente doloribus et commodi tempore
-                          distinctio.</p>
-                </div>
-
-                <div class="box-area">
-                    <h2 style="color: #2b2626">Informe de los datos</h2>
+                    <h3 style="color: #2b2626">Informe de los datos</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, tenetur id fugiat optio, laudantium, totam quo expedita repellendus magnam dolor consequuntur accusamus labore nisi harum dolore facilis laborum omnis qui!</p>
                 </div>
 
-                <div class="box-area">
-                    <h2 style="color: #2b2626">Datos:</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, tenetur id fugiat optio, laudantium, totam quo expedita repellendus magnam dolor consequuntur accusamus labore nisi harum dolore facilis laborum omnis qui!</p>
-                </div>
 
             </div>
 
