--- a/App Servicio/EstadisticasTDC.html
+++ b/App Servicio/EstadisticasTDC.html
@@ -87,7 +87,7 @@
                     
                 </div>
                 <div class="stat_global">
-                    <p>Estadisticas Globales</p>
+                    <button>Clicks</button>
                 </div>
 
             </div>
