--- a/App Servicio/resumen.html
+++ b/App Servicio/resumen.html
@@ -28,7 +28,7 @@
                     <i class='bx bxs-data iconEL'></i>
                     <span class="LetrasEL">Datos Ecommerce</span>
                 </li></a>          
-                <a href="EstadisticasTDC.html"><li>
+                <a href="resumenCafe.html"><li>
                     <i class='bx bxs-data iconEL'></i>
                     <span class="LetrasEL">Datos Blog Café</span>
                 </li></a>              
