Tablas de Tendencia
Se añadieron dos tablas que contienen informes estadisticos relacionados a la tendencia tanto del entorno local como del global

--- a/App Servicio/resumenCafe.html
+++ b/App Servicio/resumenCafe.html
@@ -92,9 +92,37 @@
                    
                 </div>
 
-                <div class="box-area">
-                    <h3 style="color: #2b2626">Informe de los datos</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, tenetur id fugiat optio, laudantium, totam quo expedita repellendus magnam dolor consequuntur accusamus labore nisi harum dolore facilis laborum omnis qui!</p>
+                <div class="box-area_global">
+                    <div class="resumen_global">
+                        <header class="titulo_resumen">Tendencia Tienda</header>
+                        <canvas id="myChart3" ></canvas>
+
+                    </div>
+                    <div class="resumen_global">
+                        <header class="titulo_resumen">Tendencia Relacionadas</header>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Producto</th><th>Lugar</th><th>Tendencia</th>
+                                </tr>
+                            </thead>
+                            <tr>
+                                <td>HTML</td><td>Bolivia</td><td>1000%</td>
+                            </tr>
+                            <tr>
+                                <td>HTML</td><td>Bolivia</td><td>1000%</td>
+                            </tr>
+                            <tr>
+                                <td>HTML</td><td>Bolivia</td><td>1000%</td>
+                            </tr>
+                            <tr>
+                                <td>HTML</td><td>Bolivia</td><td>1000%</td>
+                            </tr>
+                            <tr>
+                                <td>HTML</td><td>Bolivia</td><td>1000%</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
 
 
