--- a/App Servicio/index.html
+++ b/App Servicio/index.html
@@ -21,31 +21,19 @@
                 <i class='bx bx-menu' id="btn_menu"></i>
             </div>
 
-            <div class="elementoLat cabecera_Barralateral">
-                <ul>
-                    <a href="resumen.html"><li>
-                        <i class='bx bxs-data iconEL'></i>
-                        <span class="LetrasEL">Datos Ecommerce</span>
-                    </li></a>          
-                    <a href="EstadisticasTDC.html"><li>
-                        <i class='bx bxs-data iconEL'></i>
-                        <span class="LetrasEL">Datos Blog Café</span>
-                    </li></a>              
-                </ul>
-            </div>
+           
 
             <div class="elementoLat sitios">
                 
                 <ul>
-                    <a href="resumen.html"><li>
+                    <a href="resumenCafe.html"><li>
                         <i class='bx bx-bar-chart iconEL'></i>
 
                         <span class="LetrasEL">Ecommerce</span>
-
                         <span class="LetrasEL">Tienda De Café</span>
 
                     </li></a>
-                    <a href="resumen.html"><li>
+                    <a href="resumenCafe.html"><li>
                         <i class='bx bx-bar-chart iconEL'></i>
                         <span class="LetrasEL">Blog Café</span>
                     </li></a>
