Agg: Settings y Profile
Hasta acá quedaria el mockup.
SDettings y profile un poco macheteras pero se hizo lo que se pudo jajaja

--- a/App Servicio/EstadisticasTDC.html
+++ b/App Servicio/EstadisticasTDC.html
@@ -68,7 +68,7 @@
         </div>
         <div class="elementoLat sesion">
             <ul>
-                <a href=""><li>
+                <a href="profile.html"><li>
                     <i class='bx bx-user'></i>
                     <span class="LetrasEL">Perfil</span>
                 </li></a>
