--- a/App Servicio/index.html
+++ b/App Servicio/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="elementoLat configuraciones">
                 <ul>
-                    <a class="configuracion"   href=""><li>
+                    <a class="configuracion"   href="settings.html"><li>
                         <i class='bx bx-cog'></i>
                         <span class="LetrasEL">configuraciones</span>
                     </li></a>
@@ -52,7 +52,7 @@
             </div>
             <div class="elementoLat sesion">
                 <ul>
-                    <a href=""><li>
+                    <a href="profile.html"><li>
                         <i class='bx bx-user'></i>
                         <span class="LetrasEL">Perfil</span>
                     </li></a>
@@ -82,7 +82,7 @@
                     <h3 style="color: #2b2626">Aumentar capacidad total</h3>
                     <p style="color:#ff7f11"></p>pointerLorem ipsum dolor sit amet const, nobis placeat tempore nulla illum porro nihil sequi accusamus quam neque minus.</p>
 
-                    <h2 style="color: #2b2626">Aumentar capacidad</h2>
+                    
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing
                          elit. Hic, adipisci. Facere ullam sed, iste dolorem 
                          vel magnam veniam sapiente doloribus et commodi tempore
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="box-area">
-                    <h2 style="color: #2b2626">lorem ipsum</h2>
+                    <h3 style="color: #2b2626">lorem ipsum</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, tenetur id fugiat optio, laudantium, totam quo expedita repellendus magnam dolor consequuntur accusamus labore nisi harum dolore facilis laborum omnis qui!</p>
 
                 </div>
