--- a/App Servicio/index.html
+++ b/App Servicio/index.html
@@ -33,7 +33,7 @@
                         <span class="LetrasEL">Tienda De Café</span>
 
                     </li></a>
-                    <a href="resumenCafe.html"><li>
+                    <a href="../Tienda de cafe/index.html"><li>
                         <i class='bx bx-bar-chart iconEL'></i>
                         <span class="LetrasEL">Blog Café</span>
                     </li></a>
