--- a/App Servicio/resumenCafe.html
+++ b/App Servicio/resumenCafe.html
@@ -65,8 +65,13 @@
             <div class="section">
 
                 <div class="box-area">
+                    <a href="../Tienda de camisetas/index.html">
+                        <h3 style="color:#ff7f11">Ir</h3>
+                    </a>
 
                     <h3 style="color: #2b2626">Resumen</h3>
+                    
+                    
                     <div class="resumen">
                         <div class="stat">
                             <div class="grafico">
